--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -3365,6 +3365,45 @@ ol {
 	padding: 14px 35px;
 }
 
+.left-box {
+	width: 277px;
+	height: 841px;
+	background-color: #f0f0f0; /* Set your preferred background color */
+	float: left; /* Align the box to the left */
+}
+.small-input {
+    width: 40px; /* Adjust the width as needed */
+    padding: 5px;
+    font-size: 14px; /* Adjust the font size as needed */
+    text-align: center;
+}
+.quantity {
+	display: flex;
+	align-items: center;
+}
+
+/* Style for the label */
+.quantity label {
+	font-size: 16px;
+	margin-right: 10px;
+}
+
+/* Style for the input */
+.quantity input {
+	padding: 8px;
+	font-size: 16px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	width: 60px;
+}
+
+/* Style for the input when focused */
+.quantity input:focus {
+	border-color: #007bff;
+	outline: none;
+}
+
+
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
 
 @media only screen and (min-width: 1200px) {
