--- a/views/admin/layouts/sidebar.ejs
+++ b/views/admin/layouts/sidebar.ejs
@@ -3,8 +3,8 @@
 <div class="screen-overlay"></div>
 <aside class="navbar-aside" id="offcanvas_aside">
     <div class="aside-top">
-        <a href="index.ejs" class="brand-wrap">
-            <img src="/admin/imgs/theme/logo.svg" class="logo" alt="Nest Dashboard" />
+        <a href=index.ejs" class="brand-wrap">
+            <img src="/admin/imgs/theme/logo.jpg" class="logo" alt="Nest Dashboard" />
         </a>
         <div>
             <button class="btn btn-icon btn-aside-minimize"><i class="text-muted material-icons md-menu_open"></i></button>
@@ -37,12 +37,7 @@
                 <a class="menu-link" href="/admin/products">
                     <i class="icon material-icons md-shopping_bag"></i>
                     <span class="text">Products</span>
-                </a>
-                
-
-
-
-                
+                </a>  
             </li>
             <li class="menu-item has-submenu">
                 <a class="menu-link" href="page-orders-1.html">
@@ -55,7 +50,7 @@
                     <a href="page-orders-detail.html">Order detail</a>
                 </div>
             </li>
-            <li class="menu-item has-submenu">
+            <!-- <li class="menu-item has-submenu">
                 <a class="menu-link" href="page-sellers-cards.html">
                     <i class="icon material-icons md-store"></i>
                     <span class="text">Sellers</span>
@@ -65,8 +60,8 @@
                     <a href="page-sellers-list.html">Sellers list</a>
                     <a href="page-seller-detail.html">Seller profile</a>
                 </div>
-            </li>
-            <li class="menu-item has-submenu">
+            </li> -->
+            <!-- <li class="menu-item has-submenu">
                 <a class="menu-link" href="page-form-product-1.html">
                     <i class="icon material-icons md-add_box"></i>
                     <span class="text">Add product</span>
@@ -77,8 +72,8 @@
                     <a href="page-form-product-3.html">Add product 3</a>
                     <a href="page-form-product-4.html">Add product 4</a>
                 </div>
-            </li>
-            <li class="menu-item has-submenu">
+            </li> -->
+            <!-- <li class="menu-item has-submenu">
                 <a class="menu-link" href="page-transactions-1.html">
                     <i class="icon material-icons md-monetization_on"></i>
                     <span class="text">Transactions</span>
@@ -87,7 +82,7 @@
                     <a href="page-transactions-1.html">Transaction 1</a>
                     <a href="page-transactions-2.html">Transaction 2</a>
                 </div>
-            </li>
+            </li> -->
             <li class="menu-item has-submenu">
                 <a class="menu-link" href="#">
                     <i class="icon material-icons md-person"></i>
@@ -99,15 +94,15 @@
                     <a href="page-error-404.html">Error 404</a>
                 </div>
             </li>
-            <li class="menu-item">
+            <!-- <li class="menu-item">
                 <a class="menu-link" href="page-reviews.html">
                     <i class="icon material-icons md-comment"></i>
                     <span class="text">Reviews</span>
                 </a>
-            </li>
-            <li class="menu-item">
+            </li> -->
+            <!-- <li class="menu-item">
                 <a class="menu-link" href="page-brands.html"> <i class="icon material-icons md-stars"></i> <span class="text">Brands</span> </a>
-            </li>
+            </li> -->
             <li class="menu-item">
                 <a class="menu-link" disabled href="#">
                     <i class="icon material-icons md-pie_chart"></i>
