--- a/views/user/layouts/footer.ejs
+++ b/views/user/layouts/footer.ejs
@@ -8,6 +8,10 @@
 <script src="/user/js/mixitup.min.js"></script>
 <script src="/user/js/owl.carousel.min.js"></script>
 <script src="/user/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 </body>
 
 </html>
