env on admin work

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -52,7 +52,7 @@
             </div>
         </div>
     </section> -->
-    <section class="hero">
+    <!-- <section class="hero">
         <div class="hero__slider owl-carousel">
             <% for (let i = 0; i < banner.length; i++) { %>
                 <div class="hero__items" style="background-image: url('images/<%= banner[i].image[0] %>');"  >
@@ -80,7 +80,7 @@
                 </div>
             <% } %>
         </div>
-    </section>
+    </section> -->
    
     
     <!-- Hero Section End -->
