--- a/views/user/layouts/navItems.ejs
+++ b/views/user/layouts/navItems.ejs
@@ -2,7 +2,7 @@
     <nav class="header__menu mobile-menu">
         <ul>
             <li class="<%= currentPage === 'home' ? 'active' : '' %>"><a href="/">Home</a></li>
-            <li class="<%= currentPage === 'shop' ? 'active' : '' %>"><a href="/shop">Shop</a></li>
+            <li class="<%= currentPage === 'shop' || '' ? 'active' : '' %>"><a href="/shop">Shop</a></li>
             <li class="<%= currentPage === 'contact' ? 'active' : '' %>"><a href="/contact">Contact Us</a></li>
 
             <% if (userid) { %>
