--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -80,6 +80,10 @@
                                                         <img src="/Images/<%= cart.product_Id.image[1] %>" alt=""
                                                             style="height: 100px; width: 100px;">
                                                     </div>
+                                                    <div class="product__cart__item__pic">
+                                                        <img src="/images/<%= x.product_Id.image[0] %>" alt=""
+                                                            style="height: 100px; width: 100px;">
+                                                    </div>
                                                     <div class="product__cart__item__text">
                                                         <h6>
                                                             <%= cart.product_Id.name %>
